versioned_docs/version-2.3.1/setup/swarm/migration/1.15-to-2.0.md
---
id: 1.15-to-2.0
title: V1.15 to V2.0
slug: /setup/swarm/migration/1.15-to-2.0
sidebar_position: 6
---

Steps to migrate REGARDS from version 1.15 to 2.0

## Playbook modifications

- Download last playbook version (especially all roles) and move your inventory inside the new playbook
- Edit your inventory file `group_vars/all/main.yml` :

```yaml
# Replace
version: 1.15.X
# Into
version: 2.0.0
```

- Move static files from `group_vars/regards_nodes/files` to `static`:

```bash
cd path/to/your/inventory/group_vars/regards_nodes/
mv ./files ../../static
```

- Edit your inventory file `group_vars/regards_nodes/main.yml` and make these changes:

```yaml
# 1- Set property group_docker_static_files_migrated to True
# Before
group_docker_static_files_migrated: False
# After
group_docker_static_files_migrated: True

# 2- Add new property legacy_spring to False
group_config_mservices:
  legacy_spring: False
  [ ... ]
```

- Ensure all plugins, inside your inventory file `group_vars/regards_nodes/main.yml`, end with `-plugin` postfix, like
  this:

```yaml
# Before
group_docker_plugins:
  [ ... ]
  - image: rs-worker-manager-sender
    tag: "{{ group_docker_tags.plugins }}"
  [ ... ]
# After
group_docker_plugins:
  [ ... ]
  - image: rs-worker-manager-sender-plugin
    tag: "{{ group_docker_tags.plugins }}"
  [ ... ]
```

- Remove the `manual_revision` property and add the `legacy` property with the value `false` on RabbitMQ service. `legacy: false` indicates that the RabbitMQ image is the recent version compatible with this release.

```yaml
# Before
group_docker_cots:
  [ ... ]
  rabbitmq:
    tag: "{{ group_docker_tags.cots }}"
    manual_revision: xxx

# After
group_docker_cots:
  [ ... ]
  rabbitmq:
    tag: "{{ group_docker_tags.cots }}"
    legacy: false
    [ ... ]
```

- Shutdown REGARDS using the playbook

```bash
ansible-playbook --ask-pass --ask-become-pass -i [...] regards-shutdown.yml [...]
```

Or if your inventory use a vault system to encrypt credentials

```bash
ansible-playbook --ask-pass --ask-become-pass --ask-vault-pass -i [...] regards-shutdown.yml [...]
```

- Remove old plugins from NFS as their name may have changed

```bash
ansible-playbook --ask-pass --ask-become-pass -i [...] regards-delete-plugins.yml [...]
```

Or if your inventory use a vault system to encrypt credentials

```bash
ansible-playbook --ask-pass --ask-become-pass --ask-vault-pass -i [...] regards-delete-plugins.yml [...]
```

- Update REGARDS using the playbook

```bash
ansible-playbook --ask-pass --ask-become-pass -i [...] regards.yml [...]
```

Or if your inventory use a vault system to encrypt credentials

```bash
ansible-playbook --ask-pass --ask-become-pass --ask-vault-pass -i [...] regards.yml [...]
```

During startup and before RabbitMQ migration, some REGARDS services will be unavailable.

- Wait for the stack REGARDS to be up and running

```bash
cd /path/to/regards/cli
./status.sh
# Check every containers of RabbitMQ are up and running
```

:::info
This step may take some time, especially if the database contains a lot of data (_t_aip_ and _t_sip_ tables in the
ingest schema for the **rs-ingest** microservice, _t_feature_ table for the **rs-fem** microservice). These are SQL
scripts automatically run by Flyway to migrate the database, which can take quite a long time (contact the REGARDS
TMA team to run these scripts manually).
:::

## RabbitMQ exchange and queues migration

- Wait RabbitMQ to be up and running
- Now, connect to your RabbitMQ node or one of its replicate

```bash
# Enter inside one of the RabbitMQ container
./exec.sh rs-rabbitmq bash
```

- Create a migration script using `vi /var/lib/rabbitmq/mnesia/migration-to-2.0-backup-messages.sh` with following
  content:

```bash
#!/bin/bash -e

USER=$1

if [ $# != 1 ]; then
 echo "Usage : migration-to-2.0-backup-messages.sh <rabbitmq_admin_login>"
 exit 1
fi

read -sp "Enter RabbitMQ password: " PASSWORD

# Param 1 : Shovel ID
# Param 2 : Source tag
# Param 2 : Dest tag
function add_shovel
{
  local shovelId=${1}
  local srcQueue=${2}
  local destQueue=${3}

  printf >&2 "[\033[32mSHOVEL\033[m]\tAdd shovel to move ${srcQueue} to ${destQueue}\n"
  rabbitmqctl --quiet set_parameter shovel migrate-${shovelId} \
  "{\"src-protocol\": \"amqp091\", \"src-uri\": \"amqp:///regards.multitenant.manager\", \"src-queue\": \"${srcQueue}\", \"dest-protocol\": \"amqp091\", \"dest-uri\": \"amqp:///regards.multitenant.manager\", \"dest-queue\": \"${destQueue}\"}"
}

# Param 1 : Shovel ID
function delete_shovel
{
  local shovelId=${1}

  printf >&2 "[\033[32mSHOVEL\033[m]\tRemove shovel ${shovelId}\n"
  rabbitmqctl --quiet clear_parameter shovel migrate-${shovelId}
}


# Param 1 : Queue Name to delete
# Ensure queue is empty
function delete_empty_queue
{
  local queueName=${1}

  printf >&2 "[\033[32mQUEUES\033[m]\tRemove queue ${queueName}\n"
  rabbitmqctl --quiet delete_queue --vhost=regards.multitenant.manager ${queueName} --if-unused --if-empty || printf >&2 "[\033[34mQUEUES\033[m]\tQueue ${queueName} not existing, ignoring error...\n"
}


# Param 1 : Queue Name to delete
# Do not check if queue is empty
function delete_queue
{
  local queueName=${1}

  printf >&2 "[\033[32mQUEUES\033[m]\tRemove queue ${queueName}\n"
  rabbitmqctl --quiet delete_queue --vhost=regards.multitenant.manager ${queueName} --if-unused || printf >&2 "[\033[34mQUEUES\033[m]\tQueue ${queueName} not existing, ignoring error...\n"
}

# Param 1 : Exchange Name to delete
function delete_exchange
{
  local exchangeName=${1}

  printf >&2 "[\033[32mEXCHANGES\033[m]\tRemove exchange ${exchangeName}\n"
  rabbitmqadmin -u $USER -p $PASSWORD -V regards.multitenant.manager delete exchange name="${exchangeName}" || printf >&2 "[\033[34mEXCHANGES\033[m]\tExchange ${exchangeName} not existing, ignoring error...\n"
}

# Param 1 : Queue Name to create
function create_tmp_queue
{
  local queueName=${1}
  printf >&2 "[\033[32mQUEUES\033[m]\tCreate queue ${queueName}\n"
  rabbitmqadmin -u $USER -p $PASSWORD declare queue --vhost=regards.multitenant.manager name=${queueName} durable=true
}

create_tmp_queue tmp.WorkerManagerResponse
create_tmp_queue tmp.NotificationRequestEventHandler
create_tmp_queue tmp.SpecificRecipientNotificationRequestEventHandler

add_shovel 01 \
   regards.worker.manager.response \
   tmp.WorkerManagerResponse

add_shovel 02 \
  regards.broadcast.rs-notifier.fr.cnes.regards.modules.notifier.service.flow.NotificationRequestEventHandler \
  tmp.NotificationRequestEventHandler

add_shovel 03 \
  regards.broadcast.rs-notifier.fr.cnes.regards.modules.notifier.service.flow.SpecificRecipientNotificationRequestEventHandler \
  tmp.SpecificRecipientNotificationRequestEventHandler

printf >&2 "[\033[32mSHOVEL\033[m]\tWait 30s to ensure messages have been moved to tmp queues\n"
sleep 30

delete_shovel 01
delete_shovel 02
delete_shovel 03

delete_empty_queue regards.worker.manager.response
delete_empty_queue regards.broadcast.rs-notifier.fr.cnes.regards.modules.notifier.service.flow.NotificationRequestEventHandler
delete_empty_queue regards.broadcast.rs-notifier.fr.cnes.regards.modules.notifier.service.flow.SpecificRecipientNotificationRequestEventHandler

```

- Execute the script with your rabbitmq admin user as configured in your inventory :

```bash
chmod +x /var/lib/rabbitmq/mnesia/migration-to-2.0-backup-messages.sh
/var/lib/rabbitmq/mnesia/migration-to-2.0-backup-messages.sh <rabbitmq_admin_user>
rm -f /var/lib/rabbitmq/mnesia/migration-to-2.0-backup-messages.sh
```

- Get out of the RabbitMQ container, wait 5 min, and ensure REGARDS is running fine (using `status.sh`)

- Now you can start the final RabbitMQ migration step. Connect to your RabbitMQ node or one of its replicate

```bash
# Enter inside one of the RabbitMQ container
./exec.sh rs-rabbitmq bash
```

- Create a migration script using `vi /var/lib/rabbitmq/mnesia/migration-to-2.0-restore-messages.sh` with following
  content:

```bash
#!/bin/bash -e

# Param 1 : Shovel ID
# Param 2 : Source tag
# Param 2 : Dest tag
function add_shovel
{
  local shovelId=${1}
  local srcQueue=${2}
  local destQueue=${3}

  printf >&2 "[\033[32mSHOVEL\033[m]\tAdd shovel to move ${srcQueue} to ${destQueue}\n"
  rabbitmqctl --quiet set_parameter shovel migrate-${shovelId} \
  "{\"src-protocol\": \"amqp091\", \"src-uri\": \"amqp:///regards.multitenant.manager\", \"src-queue\": \"${srcQueue}\", \"dest-protocol\": \"amqp091\", \"dest-uri\": \"amqp:///regards.multitenant.manager\", \"dest-queue\": \"${destQueue}\"}"
}

# Param 1 : Shovel ID
function delete_shovel
{
  local shovelId=${1}

  printf >&2 "[\033[32mSHOVEL\033[m]\tRemove shovel ${shovelId}\n"
  rabbitmqctl --quiet clear_parameter shovel migrate-${shovelId}
}


# Param 1 : Queue Name to delete
# Ensure queue is empty
function delete_empty_queue
{
  local queueName=${1}

  printf >&2 "[\033[32mQUEUES\033[m]\tRemove queue ${queueName}\n"
  rabbitmqctl --quiet delete_queue --vhost=regards.multitenant.manager ${queueName} --if-unused --if-empty || printf >&2 "[\033[34mQUEUES\033[m]\tQueue ${queueName} not existing, ignoring error...\n"
}


add_shovel 01 \
   tmp.WorkerManagerResponse \
   regards.worker.manager.response

add_shovel 02 \
  tmp.NotificationRequestEventHandler \
  regards.broadcast.rs-notifier.fr.cnes.regards.modules.notifier.service.flow.NotificationRequestEventHandler

add_shovel 03 \
  tmp.SpecificRecipientNotificationRequestEventHandler \
  regards.broadcast.rs-notifier.fr.cnes.regards.modules.notifier.service.flow.SpecificRecipientNotificationRequestEventHandler

printf >&2 "[\033[32mSHOVEL\033[m]\tWait 30s to ensure messages have been moved from tmp queues to real queues\n"
sleep 30


delete_shovel 01
delete_shovel 02
delete_shovel 03

delete_empty_queue tmp.WorkerManagerResponse
delete_empty_queue tmp.NotificationRequestEventHandler
delete_empty_queue tmp.SpecificRecipientNotificationRequestEventHandler
```

- Execute the script:

```bash
chmod +x /var/lib/rabbitmq/mnesia/migration-to-2.0-restore-messages.sh
/var/lib/rabbitmq/mnesia/migration-to-2.0-restore-messages.sh
rm -f /var/lib/rabbitmq/mnesia/migration-to-2.0-restore-messages.sh
```

## Notifier plugin configuration

Notifier `dissemination-ack-sender-plugin` configuration has changed with the configuration version 2.0 of the plugin.

:::warning
The notifier plugin configuration migration must be done for all projects of your REGARDS instance.
:::

1. Export the Notifier configuration.
   See [this documentation](../../../user-documentation/2-project-configuration/microservices.md) to do it.
2. Find in the configuration file exported if any `dissemination-ack-sender-plugin` exists. **This migration is only
   mandatory for REGARDS project using `dissemination-ack-sender-plugin` plugin**
3. In the plugin configuration,

**New recipient label parameter :**
Add the new recipientLabel parameter in the plugin configuration section. The value of the parameter should be set to
the name of the dissemination recipient configured in the notifier sender
plugin from the source REGARDS.

```json
{
  "configuration": [
    {
      "key": "fr.cnes.regards.framework.modules.plugins.domain.PluginConfiguration",
      "value": {
        "pluginId": "DisseminationAckSender",
        "parameters": [
          {
            "name": "recipientLabel",
            "type": "STRING",
            "value": "<Ack catalog owner name>",
            "dynamic": false
          },
          ...
        ]
      }
    }
  ]
}
```

**New dedicated DLQ parameter :**
The plugin can now put dissemination messages in errors to a dedicated queue DLQ.
Please add the following parameter, if needed.
If the product to ack in the source REGARDS catalog is an OAIS product, parameter name is
aipDisseminationUseDedicatedDlq.
If the product to ack in the source REGARDS catalog is a GeoJSON product, parameter name is
featureDisseminationUseDedicatedDlq.

```json
{
  "configuration": [
    {
      "key": "fr.cnes.regards.framework.modules.plugins.domain.PluginConfiguration",
      "value": {
        "pluginId": "DisseminationAckSender",
        "parameters": [
          {
            "name": "<productSource>DisseminationUseDedicatedDlq",
            "type": "BOOLEAN",
            "value": "true",
            "dynamic": false
          },
          ...
        ]
      }
    }
  ]
}
```

## Problems you may encounter

## Plugin issue

In the event of a microservice startup error with a `Not a managed type: class fr.cnes.regards.modules.xxxx` error, make
sure there are no plugins from the old version left in the associated NFS directory. If so, delete the old versions
manually.

## RabbitMQ migration issue

In the event of a microservice startup error with a
` Going to exit <#20f786a8> c.r.c.ShutdownSignalException: channel error; protocol method: #method<channel.close>(reply-code=406, reply-text=PRECONDITION_FAILED - inequivalent arg 'x-dead-letter-exchange' for queue 'xxx.xxx.xxxx' in vhost 'regards.multitenant.manager': received the value 'regards.DLX' of type 'longstr' but current is none)`
error, it is necessary to replay the RabbitMQ migration scripts described above.
